networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: craftique-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: ingress
    app.kubernetes.io/component: networking
    app.kubernetes.io/part-of: craftique
    app.kubernetes.io/managed-by: argocd
    environment: production
    owner: secdevops-team
    project: craftique-482022
    cost-center: education
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - craftique.chickenkiller.com
      secretName: craftique-tls-cert
  rules:
  - host: craftique.chickenkiller.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
